[taotao-cloud-project-1682] update[ mapper ]